--- a/compiladores2023.cabal
+++ b/compiladores2023.cabal
@@ -27,6 +27,7 @@ executable compiladores2023
     -- Modules included in this executable, other than Main.
     other-modules:
         Bytecompile
+        Bytecompile8
         CEK
         Common
         Elab
